# fish-bridge-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: compiler-modes.md  configuration.md  graph-schema.md  ingestors.md  quickstart.md
examples/: claude-mcp-config.json  copilot-mcp-config.json  cursor-mcp-config.json  python-library-demo.py
fish_bridge/: __init__.py  cli.py  config.py  platforms.py  server.py
fish_bridge/compiler/: active_thread.py  base.py  digest.py  focus.py
fish_bridge/extraction/: base.py  claude.py  dedup.py  hybrid.py  local.py  openai.py  preprocessor.py  prompts.py
fish_bridge/graph/: algorithms.py  schema.py  session.py  store.py
fish_bridge/ingestors/: base.py  chat.py  codebase.py  copilot.py  dependency.py  document.py  iac.py  obsidian.py  openapi.py  pdf.py  session_file.py  testout.py
fish_bridge/viewer/: index.html  server.py  viewer.css  viewer.js
tests/: conftest.py  test_compiler.py  test_extraction.py  test_ingestors.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_session_fixes.py
tests/e2e/: Dockerfile.pip-install  Dockerfile.uv-install  conftest.py  run_install_matrix.sh  test_scenarios.py
tests/fixtures/: claude-export.json  paste-export.txt  sample-copilot-session.jsonl  test-api.openapi.yaml
tests/fixtures/obsidian-vault/: api-decisions.md  python-architecture.md
