[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fish-bridge-mcp"
version = "0.1.0"
description = "Session-scoped knowledge graph engine for AI chat context compression"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "mcp-server", "llm-memory", "knowledge-graph", "ai-context-management",
    "session-graph", "context-compression", "copilot", "claude", "ollama",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2,<3",
    "anthropic>=0.25",
    "openai>=1.20",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "networkx>=3.3",
    "rich>=13.7",
    "mcp>=1.25,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
fish-bridge = "fish_bridge.cli:app"

[project.urls]
Repository = "https://github.com/msong/fish_bridge"

[tool.hatch.build.targets.wheel]
packages = ["fish_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
