[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fish-bridge-mcp"
version = "0.1.3"
description = "Session-scoped knowledge graph engine for AI chat context compression"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "mcp-server", "llm-memory", "knowledge-graph", "ai-context-management",
    "session-graph", "context-compression", "copilot", "claude", "ollama",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2,<3",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "networkx>=3.3",
    "rich>=13.7",
    "mcp>=1.25,<2",
]

[project.optional-dependencies]
# Cloud extraction backends
claude   = ["anthropic>=0.40,<1"]
openai   = ["openai>=1.20"]
gemini   = ["openai>=1.20"]   # Gemini uses the OpenAI-compatible SDK

# Local / offline
local    = ["sentence-transformers>=2.7"]   # embedding fallback when Ollama not running

# Ingestor extras
# codebase ingestor uses git log + regex — no tree-sitter required
codebase = []
iac      = ["python-hcl2>=8"]
openapi  = ["openapi-spec-validator>=0.7"]
pdf      = ["pypdf>=4.0"]

# Install everything for development
all = [
    "anthropic>=0.40,<1",
    "openai>=1.20",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "anthropic>=0.40,<1",
    "openai>=1.20",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
fish-bridge     = "fish_bridge.cli:app"
fish-bridge-mcp = "fish_bridge.server:main"

[project.urls]
Homepage = "https://github.com/MakeaMouse/fish-bridge-mcp"
Repository = "https://github.com/MakeaMouse/fish-bridge-mcp"
Issues = "https://github.com/MakeaMouse/fish-bridge-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["fish_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
